--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".FourButtonsActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,16 +21,12 @@
             android:label="@string/title_activity_file_dialog" >
         </activity>
         <activity
-            android:name=".GraphView.CNCControlActivity"
-            android:label="@string/title_activity_cnccontrol" >
-        </activity>
-        <activity
             android:name=".GraphView.CNCControlViewActivity"
             android:label="@string/title_activity_cnccontrol_view"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".FourButtonsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ru.android_cnc.acnc.MainActivity" />
+                android:value="ru.android_cnc.acnc.FourButtonsActivity" />
         </activity>
 
         <service
@@ -42,6 +38,10 @@
             android:name=".THCService"
             android:exported="false" >
         </service>
+        <activity
+            android:name=".GcodeTextEdit.GcodeTextEditActivity"
+            android:label="@string/title_activity_gcode_text_edit" >
+        </activity>
     </application>
 
 </manifest>
