--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         config01 {
+            keyAlias 'AndroidKey'
+            keyPassword '4rfv5tgb'
+            storeFile file('/home/alexey/keystores/android.jks')
+            storePassword '4rfv5tgb'
         }
     }
     compileSdkVersion 21
