--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     signingConfigs {
-        config01 {
-            keyAlias 'AndroidKey'
-            keyPassword '4rfv5tgb'
-            storeFile file('/home/alexey/keystores/android.jks')
-            storePassword '4rfv5tgb'
-        }
     }
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "ru.android_cnc.acnc"
         minSdkVersion 17
@@ -22,7 +16,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config01
+        }
+        debug {
+            debuggable true
+            jniDebuggable true
+            renderscriptDebuggable true
         }
     }
     productFlavors {
